<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Gallery</string>
    <string name="details_ms">%1$02d:%2$02d</string>
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <string name="movie_view_label">Video Player</string>
    <string name="loading_video">Loading video\u2026</string>
    <string name="resume_playing_title">Resume video</string>
    <string name="resume_playing_message">Resume playing from last position！</string>
    <string name="resume_playing_resume">Resume playing</string>
    <string name="loading">Loading\u2026</string>
    <string name="fail_to_load">Couldn\'t load</string>
    <string name="fail_to_load_image">Couldn\'t load the image</string>
    <string name="no_thumbnail">No thumbnail</string>
    <string name="resume_playing_restart">Start over</string>
    <string name="ok">OK</string>
    <string name="saving_image">Saving picture\u2026</string>
    <string name="filtershow_saving_image">Saving picture to <xliff:g id="album_name">%1$s</xliff:g> \u2026</string>
    <string name="crop_label">Crop picture</string>
    <string name="trim_label">Trim video</string>
    <string name="select_image">Select photo</string>
    <string name="select_video">Select video</string>
    <string name="select_item">Select item</string>
    <string name="select_album">Select album</string>
    <string name="select_group">Select group</string>
    <string name="set_image">Set picture as</string>
    <string name="camera_setas_wallpaper">Wallpaper</string>
    <string name="delete">Delete</string>
    <plurals name="delete_selection">
        <item quantity="one">Delete selected item?</item>
        <item quantity="other">Delete selected items?</item>
    </plurals>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="share_panorama">Share panorama</string>
    <string name="share_as_photo">Share as photo</string>
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="slideshow">Slide show</string>
    <string name="details">Details</string>
    <string name="details_title">%1$d of %2$d items:</string>
    <string name="close">Close</string>
    <string name="switch_to_camera">Switch to Camera</string>
    <plurals name="number_of_items_selected">
        <item quantity="zero">%1$d selected</item>
        <item quantity="one">%1$d selected</item>
        <item quantity="other">%1$d selected</item>
    </plurals>
    <string name="show_on_map">Show on map</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="no_such_item">Couldn\'t find item.</string>
    <string name="edit">Edit</string>
    <string name="simple_edit">Simple Edit</string>
    <string name="crop_action">Crop</string>
    <string name="trim_action">Trim</string>
    <string name="mute_action">Mute</string>
    <string name="set_as">Set as</string>
    <string name="video_mute_err">Can\'t mute video.</string>
    <string name="video_err">Can\'t play video.</string>
    <string name="group_by_location">By location</string>
    <string name="group_by_time">By time</string>
    <string name="group_by_tags">By tags</string>
    <string name="group_by_faces">By people</string>
    <string name="group_by_album">By album</string>
    <string name="group_by_size">By size</string>
    <string name="untagged">Untagged</string>
    <string name="no_location">No location</string>
    <string name="no_connectivity">Some locations couldn\'t be identified due to network problems.</string>
    <string name="sync_album_error">Couldn\'t download the photos in this album. Retry later.</string>
    <string name="show_images_only">Images only</string>
    <string name="show_videos_only">Videos only</string>
    <string name="show_all">Images &amp; videos</string>
    <string name="appwidget_title">Photo Gallery</string>
    <string name="appwidget_empty_text">No photos.</string>
    <string name="crop_saved">
        Cropped image saved to <xliff:g id="folder_name">%s</xliff:g>.</string>
    <string name="no_albums_alert">No albums available.</string>
    <string name="empty_album">O images/videos available.</string>
    <string name="done">Done</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="path">Path</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="orientation">Orientation</string>
    <string name="duration">Duration</string>
    <string name="mimetype">MIME type</string>
    <string name="file_size">File size</string>
    <string name="maker">Maker</string>
    <string name="model">Model</string>
    <string name="flash">Flash</string>
    <string name="aperture">Aperture</string>
    <string name="focal_length">Focal Length</string>
    <string name="white_balance">White balance</string>
    <string name="exposure_time">Exposure time</string>
    <string name="iso">ISO</string>
    <string name="unit_mm">mm</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="flash_on">Flash fired</string>
    <string name="flash_off">No flash</string>
    <string name="unknown">Unknown</string>
    <string name="ffx_vintage">Vintage</string>
    <string name="ffx_instant">Instant</string>
    <string name="ffx_bleach">Bleach</string>
    <string name="ffx_blue_crush">Blue</string>
    <string name="ffx_bw_contrast">B/W</string>
    <string name="ffx_punch">Punch</string>
    <string name="ffx_x_process">X Process</string>
    <string name="ffx_washout">Latte</string>
    <string name="ffx_washout_color">Litho</string>
    <string name="ffx_dehaze">Dehaze</string>
    <string name="set_label_all_albums">All albums</string>
    <string name="set_label_local_albums">Local albums</string>
    <string name="size_below"><xliff:g id="size">%1$s</xliff:g> or below</string>
    <string name="size_above"><xliff:g id="size">%1$s</xliff:g> or above</string>
    <string name="size_between"><xliff:g id="min_size">%1$s</xliff:g> to <xliff:g id="max_size">%2$s</xliff:g></string>
    <string name="Import">Import</string>
    <string name="import_complete">Import complete</string>
    <string name="widget_type_album">Choose an album</string>
    <string name="widget_type_shuffle">Shuffle all images</string>
    <string name="widget_type_photo">Choose an image</string>
    <string name="widget_type">Choose images</string>
    <string name="slideshow_dream_name">Slideshow</string>
    <string name="albums">Albums</string>
    <string name="times">Times</string>
    <string name="locations">Locations</string>
    <string name="people">People</string>
    <string name="tags">Tags</string>
    <string name="group_by">Group by</string>
    <string name="settings">Settings</string>
    <string name="folder_camera">Camera</string>
    <string name="folder_download">Download</string>
    <string name="folder_edited_online_photos">Edited Online Photos</string>
    <string name="folder_imported">Imported</string>
    <string name="folder_screenshot">Screenshots</string>
    <string name="help">Help</string>
    <string name="switch_photo_filmstrip">Filmstrip view</string>
    <string name="switch_photo_grid">Grid view</string>
    <string name="switch_photo_fullscreen">Fullscreen view</string>
    <string name="trimming">Trimming</string>
    <string name="muting">Muting</string>
    <string name="please_wait">Please wait</string>
    <string name="save_into">Saving video to <xliff:g id="album_name">%1$s</xliff:g> \u2026</string>
    <string name="pano_progress_text">Rendering panorama</string>
    <string name="save" msgid="8140440041190264400">Save</string>
    <string name="ingest_import">@string/Import</string>
    <string name="ingest_switch">Swtich</string>
    <string name="ingest_import_complete">@string/import_complete</string>
    <string name="ingest_scanning" msgid="2048262851775139720">Scanning content...</string>
    <plurals name="ingest_number_of_items_scanned">
        <item quantity="zero">%1$d items scanned</item>
        <item quantity="one">%1$d item scanned</item>
        <item quantity="other">%1$d items scanned</item>
    </plurals>
    <plurals name="ingest_number_of_items_selected">
        <item quantity="zero">%1$d items selected</item>
        <item quantity="one">%1$d item selected</item>
        <item quantity="other">%1$d items selected</item>
    </plurals>
    <string name="ingest_sorting" msgid="624687230903648118">Sorting...</string>
    <string name="ingest_scanning_done">Scanning done</string>
    <string name="ingest_importing">Importing...</string>
    <string name="ingest_empty_device">There is no content available for importing on this device.</string>
    <string name="ingest_no_device">There is no MTP device connected</string>
    <string name="ingest_switch_photo_grid">@string/switch_photo_grid</string>
    <string name="ingest_switch_photo_fullscreen">@string/switch_photo_fullscreen</string>
    <string name="camera_label">Camera</string>
    <string name="accessibility_play_video">Play video</string>
    <string name="accessibility_time_bar">Video player time bar</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_search">Search</string>
    <string name="tab_photos">Photos</string>
    <string name="tab_albums">Albums</string>
    <plurals name="number_of_photos">
        <item quantity="one">%1$d photo</item>
        <item quantity="other">%1$d photos</item>
    </plurals>
    <string name="special_video_restart_playing">No keyframes video will restart playing</string>
    <string name="gif_decode_failed">The gif image is too large to play</string>
    <string name="spaceLow_content">Save fails, the system may be insufficient storage space.</string>
    <string name="wait_for_deleting">Deleting, please to wait&#8230;</string>
    <string name="wait_for_rotating">Rotating, please to wait&#8230;</string>
    <string name="video_save_to_bookmark">Save to bookmarks</string>
    <string name="video_view_bookmarks">Bookmarks</string>
    <string name="video_bookmarks">Bookmarks</string>
    <string name="video_edit_bookmark">Edit</string>
    <string name="video_delete_bookmark">Delete</string>
    <string name="empty_bookmarks">Empty bookmark</string>
    <string name="do_not_save">Cancel</string>
    <string name="net_location">Address</string>
    <string name="name">Name</string>
    <string name="channel_setting_left">"Left"</string>
    <string name="channel_setting_right">"Right"</string>
    <string name="channel_setting_dual">"Dual"</string>
    <string name="slideshow_music">Slide music</string>
    <string name="slidemusic">Set slide show music</string>
    <string name="setas">Set As</string>
    <string name="edit_crop_free">"Free"</string>
    <string name="edit_crop_4_3">"4:3"</string>
    <string name="edit_crop_16_9">"16:9"</string>
    <string name="edit_crop_square">"Square"</string>
    <string name="edit_crop_origin">"Original"</string>
    <string name="first_summary">"page down by default"</string>
    <string name="sencond_summury">"page up when volume up "</string>
    <string name="third_summury">"page down when volume down "</string>
    <string name="fourth_summury">"summary: take up the volume key "</string>
    <string name="add_to_album">Add to album</string>
    <string name="trash_restore">Restore</string>
    <string name="move_out_of_this_classification">Move out</string>
    <string name="move_out_of_this_people">Move out</string>
    <string name="play_motion_photo">Play</string>
</resources>