<?xml version="1.0" encoding="utf-8"?><!-- SPRD: Bug474618 Channel volume settings Create -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/channel_setting_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/channel_label_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:text="@string/channel_setting_left"
            android:ellipsize="end"
            android:maxLines="2"
            android:maxEms="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/channel_setting_dual"
            android:ellipsize="end"
            android:maxLines="2"
            android:maxEms="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:text="@string/channel_setting_right"
            android:ellipsize="end"
            android:maxLines="2"
            android:maxEms="4" />
    </RelativeLayout>

    <SeekBar
        android:id="@+id/channel_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/channel_label_layout"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:max="500"
        android:progressDrawable="@drawable/progress_horizontal" />

</RelativeLayout>